# python-project-lvl4

./: .env.example  .gitignore  .travis.yml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
fcm/: admin.py  forms.py  models.py  urls.py  views.py
fcm/migrations/: 0001_initial.py  0002_auto_20210110_1509.py  0003_auto_20210110_1629.py
fcm/templates/fcm/: first.html  second.html  third.html
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/: staticfiles.json
task_manager/: settings.py  urls.py  views.py
task_manager/templates/task_manager/: base.html  index.html  message.html  nav_links.html
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20210113_1922.py  0003_auto_20210114_1634.py  0004_auto_20210114_1638.py  0005_auto_20210114_1643.py
tasks/templates/tasks/: tasks.html  tasks_list.html
tasks/templatetags/: tasks_extras.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: delete.html  login.html  logout.html  register.html  update.html  userlist.html
users/templatetags/: users_extras.py
