[tool.poetry]
name = "topolun-task-manager"
version = "0.1.0"
description = ""
authors = ["Topolun <vik83tu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.4"
django-bootstrap4 = "^2.3.1"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"
rollbar = "^0.15.1"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
